--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "fix": "^0.0.6",
     "react": "^18.3.1",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
